--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.20.6",
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
 		"meteor-node-stubs": "^1.2.5",
 		"svelte": "^3.54.0"
